--- a/Elements_Palette_4.8
+++ b/Elements_Palette_4.8
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @name        Elements Palette ⭐　🔲
+// @name        Elements Palette ⭐
 // @namespace        http://tampermonkey.net/
 // @version        4.8
 // @description        編集枠に各種要素を自動記入するツール
@@ -8,6 +8,8 @@
 // @exclude        https://blog.ameba.jp/ucs/entry/srventrylist.do*
 // @icon        https://www.google.com/s2/favicons?sz=64&domain=ameblo.jp
 // @grant        none
+// @updateURL        https://github.com/personwritep/Elements_Palette/raw/main/Elements_Palette.user.js
+// @downloadURL        https://github.com/personwritep/Elements_Palette/raw/main/Elements_Palette.user.js
 // ==/UserScript==
 
 
