--- a/Elements_Palette_5.6
+++ b/Elements_Palette_5.6
@@ -1,4 +1,4 @@
-​// ==UserScript==
+// ==UserScript==
 // @name        Elements Palette ⭐
 // @namespace        http://tampermonkey.net/
 // @version        5.6
